# china-citizen-id

./: Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: crawl.py
src/: lib.rs  region.json
